--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -17,63 +17,62 @@ jobs:
         with:
           go-version: '1.19.0'
 
-      - name: 
-        run: |
-          ./gradlew build
-  test:
+      - name: Go Build
+        run: go build -o main
+
+  integration-test:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
 
-      - uses: actions/setup-java@v3
+      - uses: actions/setup-go@v3
         with:
-          distribution: 'corretto'
-          java-version: '17'
+          go-version: '1.19.0'
 
-      - name: Gradle Test
+      - name: Integration Test
         run: |
-          ./gradlew test
-      - name: Test Report
-        uses: dorny/test-reporter@v1
-        if: success() || failure()
-        with:
-          name: Junit Tests
-          path: build/test-results/test/TEST*.xml
-          reporter: java-junit
+          go run main.go &
+          go test
 
-  sonar:
-    runs-on: ubuntu-latest
+      # - name: Test Report
+      #   uses: dorny/test-reporter@v1
+      #   if: success() || failure()
+      #   with:
+      #     name: Junit Tests
+      #     path: build/test-results/test/TEST*.xml
+      #     reporter: java-junit
 
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
+  # sonar:
+  #   runs-on: ubuntu-latest
 
-      - uses: actions/setup-java@v3
-        with:
-          distribution: 'corretto'
-          java-version: '17'
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #       with:
+  #         fetch-depth: 0
 
-      - name: Cache SonarCloud packages
-        uses: actions/cache@v1
-        with:
-          path: ~/.sonar/cache
-          key: ${{ runner.os }}-sonar
-          restore-keys: ${{ runner.os }}-sonar
+  #     - uses: actions/setup-java@v3
+  #       with:
+  #         distribution: 'corretto'
+  #         java-version: '17'
 
-      - name: Cache Gradle packages
-        uses: actions/cache@v1
-        with:
-          path: ~/.gradle/caches
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
-          restore-keys: ${{ runner.os }}-gradle
+  #     - name: Cache SonarCloud packages
+  #       uses: actions/cache@v1
+  #       with:
+  #         path: ~/.sonar/cache
+  #         key: ${{ runner.os }}-sonar
+  #         restore-keys: ${{ runner.os }}-sonar
 
-      - name: gradle test and jacoco
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: |
-          ./gradlew build test jacocoTestReport sonarqube --info
+  #     - name: Cache Gradle packages
+  #       uses: actions/cache@v1
+  #       with:
+  #         path: ~/.gradle/caches
+  #         key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
+  #         restore-keys: ${{ runner.os }}-gradle
+
+  #     - name: gradle test and jacoco
+  #       env:
+  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  #         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+  #       run: |
+  #         ./gradlew build test jacocoTestReport sonarqube --info
