WIP: fixed integration test 1

--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -33,6 +33,7 @@ jobs:
       - name: Integration Test
         run: |
           go run main.go &
+          cd test
           go test
 
       # - name: Test Report
