--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -36,44 +36,17 @@ jobs:
           cd test
           go test -v
 
-      # - name: Test Report
-      #   uses: dorny/test-reporter@v1
-      #   if: success() || failure()
-      #   with:
-      #     name: Junit Tests
-      #     path: build/test-results/test/TEST*.xml
-      #     reporter: java-junit
 
-  # sonar:
-  #   runs-on: ubuntu-latest
+  sonar:
+    runs-on: ubuntu-latest
 
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #       with:
-  #         fetch-depth: 0
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
-  #     - uses: actions/setup-java@v3
-  #       with:
-  #         distribution: 'corretto'
-  #         java-version: '17'
-
-  #     - name: Cache SonarCloud packages
-  #       uses: actions/cache@v1
-  #       with:
-  #         path: ~/.sonar/cache
-  #         key: ${{ runner.os }}-sonar
-  #         restore-keys: ${{ runner.os }}-sonar
-
-  #     - name: Cache Gradle packages
-  #       uses: actions/cache@v1
-  #       with:
-  #         path: ~/.gradle/caches
-  #         key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
-  #         restore-keys: ${{ runner.os }}-gradle
-
-  #     - name: gradle test and jacoco
-  #       env:
-  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  #         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-  #       run: |
-  #         ./gradlew build test jacocoTestReport sonarqube --info
+      - name: sonarcloud
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: 23329cc3a0f3a0f397c294fefe9de75aa3b82b55
