fixed sonar props

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 sonar.projectKey=l5-integration-test-odorT
 sonar.projectName=my awesome project
+sonar.organization=bhos-qa
 
 sonar.sources=.
 sonar.exclusions=**/*_test.go
