fixed sonar props

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,10 @@
-sonar.projectKey=l5-integration-test-odorT
-sonar.projectName=my awesome project
+sonar.projectKey=bhos-qa_l5-integration-test-odorT
+sonar.projectName=awesomeGoProject
 sonar.organization=bhos-qa
+sonar.host.url=https://sonarcloud.io
+
+sonar.scm.forceReloadAll=true
+sonar.qualitygate.wait=true
 
 sonar.sources=.
 sonar.exclusions=**/*_test.go
